[package]
name = "rusty-vision"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that captures screenshots of windows/screens for AI agent consumption"

[dependencies]
xcap = "0.9"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
anyhow = "1"
