[package]
name = "rusty-vision"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that captures screenshots of windows/screens for AI agent consumption"

[dependencies]
xcap = "0.9"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.24"
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_HiDpi", "Win32_Storage_Xps"] }
imageproc = "0.25"
ab_glyph = "0.2"
